Corrige token de autenticacao, corrige exibicao de exception e usa carbon pra datas

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "ext-json": "*",
         "illuminate/support": "^5.8",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/config": "^5.8"
+        "illuminate/config": "^5.8",
+        "nesbot/carbon": "^1.26"
     },
     "autoload": {
         "psr-4": {
