Remove carbon, adiciona configuracao de dateparser e configuracao agora é passado como um array pra diminuir quantidade de argumentos na constructor da classe

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
         "ext-json": "*",
         "illuminate/support": "^5.8",
         "guzzlehttp/guzzle": "^6.3",
-        "illuminate/config": "^5.8",
-        "nesbot/carbon": "^1.26"
+        "illuminate/config": "^5.8"
     },
     "autoload": {
         "psr-4": {
